tests/sema/invalid/import_cycle.vit
space demo/cycle_a;
use demo/cycle_b as b;

proc main() -> int {
  give b.value();
}
